# gvs

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  gvs.doap
data/: Makefile.include  gvs-1.0.pc.in
doc/: .gitignore  Makefile.am
gvs/: Makefile.include  gvs-deserializer.c  gvs-deserializer.h  gvs-gobject.c  gvs-gobject.h  gvs-serializable.c  gvs-serializable.h  gvs-serializer.c  gvs-serializer.h  gvs.h
po/: POTFILES.in
tests/: Makefile.include  test-basic-vala.vala  test-basic.c  test-circular-refs.c  test-inheritance.c  test-interfaces-vala.vala  test-object.c
